# Koe-swift

./: .gitignore  CHANGELOG.md  CLAUDE.md  ExportOptions-MAS.plist  Info-macOS.plist  Info.plist  Koe-macOS.entitlements  LICENSE  MISSION.md  README.md  RELEASE_NOTES_koe-integration.md  THIRD_PARTY_LICENSES.md  build-dmg.sh  build-pkg.sh  build.sh  create-dmg-background.swift  entitlements.plist  project-macos.yml  release.sh
.github/workflows/: deploy-site.yml  release.yml  windows-build.yml
Koe-iOS/: ExportOptions.plist  Info.plist  PRODUCT_ROADMAP.md  project.yml
Koe-iOS/Koe.xcodeproj/: project.pbxproj
Koe-iOS/KoeKeyboard/: Info.plist  KeyboardViewController.swift
Koe-iOS/KoeShareExt/: Info.plist  (+1 more)
Koe-macOS.xcodeproj/: project.pbxproj
Koe-windows/: Cargo.toml  README.md  SIGNING.md  build.bat  build.ps1  build.rs
Koe-windows/installer/: koe-installer.nsi
Koe-windows/src/: audio.rs  config.rs  hotkey.rs  main.rs  model.rs  overlay.rs  paste.rs  soluna.rs  transcribe.rs  tray.rs
Resources/: oww_detector.py
Tests/: KoeTests.swift  run_tests.sh
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
docs/: build-arm64.md  personas-feedback-loop.md  personas.md
fastlane/: Fastfile  README.md  report.xml
fastlane-macos/: Appfile  Fastfile
lib-macos/: ggml-metal.metal
raycast-extension/: README.md  package.json
site/: Cargo.toml  Dockerfile  fly.toml  index.html  install.sh  og.html  pricing.html  robots.txt  sitemap.xml  support.html  vs-notta.html  zenn-comparison.md
tasks/: lessons.md  todo.md
(+205 files in other folders)
